[refactor] Standardize on `wp-data` for the persistent storage name and path
- nginx and WordPress now see the uploads at `/wp-data`
- don't use the NFS subdir provisioner, so that the uploads are easier
to find on non-Kubernetes NFS clients (not to mention easier to DRP)
- Select `wp-data-ro-openshift3` as the name (and path — But this only
concerns the operator) for the migration restore source

--- a/ansible/inventory/test/wordpress_namespaces.yml
+++ b/ansible/inventory/test/wordpress_namespaces.yml
@@ -18,6 +18,7 @@ all_namespaces:
                 insecure: true
             namespace:wordpress-test-in-okd:
               inventory_namespace: wordpress-test
+              inventory_has_cluster_admin: True
               openshift_login:
                 url: https://api.okd-test.fsd.team:6443
                 insecure: true
@@ -32,3 +33,4 @@ all_namespaces:
               ansible_rancher_url: https://rancher-fsd.epfl.ch
               ansible_rancher_cluster_name: wordpress-test
               ansible_user: root
+              inventory_has_cluster_admin: True
