--- a/ansible/roles/wordpress-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-namespace/tasks/main.yml
@@ -45,3 +45,19 @@
   tags:
     - wp
     - wp.secrets
+
+- name: Storage (for files)
+  include_tasks:
+    file: storage.yml
+    apply:
+      tags:
+      - wp
+      - wp.storage
+  tags:
+    - wp
+    - wp.storage
+  vars:
+    # Setting up the PV (and managing access to it, so that other
+    # tenants cannot “steal” it from us) is for ITOP-SDDC to manage:
+    _storage_managed: >-
+      {{ inventory_has_cluster_admin | default(False) }}
