--- a/ansible/roles/wordpress-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-namespace/tasks/main.yml
@@ -23,6 +23,7 @@
       tags:
         - wp
         - wp.web
+        - wp.nginx
       vars:
         # We want to manage RBAC in RKE2 clusters only — OpenShifts
         # (and OKDs) use OLM as the RBAC vehicle instead:
@@ -34,6 +35,7 @@
   tags:
     - wp
     - wp.web
+    - wp.nginx
 
 - name: Serving secrets (for plugins, outgoing SMTP etc.)
   include_tasks:
