[feature] `-t wp.secrets`: create `Secret/restore-credentials` for operator

--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -1,5 +1,8 @@
 - tags: always
-  include_vars: "serving-secrets-{{ inventory_deployment_stage }}.yml"
+  include_vars: "{{ item }}"
+  with_items:
+  - serving-secrets-{{ inventory_deployment_stage }}.yml
+  - secrets-vars.yml
 
 - name: "SMTP password"
   kubernetes.core.k8s:
@@ -14,6 +17,20 @@
       data:
          SERVICE_WWP_NOREPLY_PASSWORD: "{{ smtp.password | eyaml(eyaml_keys) | b64encode }}"
   tags: httpd.secrets
+
+- name: Scality restore secret
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Secret
+      metadata:
+        name: restore-credentials
+        namespace: "{{ inventory_namespace }}"
+      type: Opaque
+      stringData:
+        aws-cli-credentials.ini: >-
+          {{ lookup("pipe", "keybase fs read " + keybase_restore_secret_path) }}
 
 - name: EPFL plugin secrets
   kubernetes.core.k8s:
