[feature] `-t wp.secrets`: put in the `s3-backup-credentials` secret
The WordPress operator relies on it to schedule restores through the
MariaDB operator.

--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -52,3 +52,25 @@
         saferpay_prod_apiusername: "{{ saferpay.prod.apiusername | eyaml(eyaml_keys) }}"
         saferpay_prod_customerid: "{{ saferpay.prod.customerid | eyaml(eyaml_keys) | string }}"
         saferpay_prod_terminalid: "{{ saferpay.prod.terminalid | eyaml(eyaml_keys) | string }}"
+
+- tags: always
+  include_vars: "backup-secrets-{{ inventory_deployment_stage }}.yml"
+
+- name: MariaDB operator restore secret
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Secret
+      metadata:
+        name: s3-backup-credentials
+        namespace: "{{ inventory_namespace }}"
+      type: Opaque
+      stringData:
+        keyId: "{{ _keyId }}"
+        accessSecret: "{{ _accessSecret }}"
+  vars:
+    _keyId: >-
+        {{ mariadb_operator_s3_backups.keyId | eyaml(eyaml_keys) }}
+    _accessSecret: >-
+        {{ mariadb_operator_s3_backups.accessSecret | eyaml(eyaml_keys) }}
