--- a/ansible/roles/openshift-reverse-proxy/tasks/reverseproxy.yml
+++ b/ansible/roles/openshift-reverse-proxy/tasks/reverseproxy.yml
@@ -34,6 +34,8 @@
           port: 443
           protocol: TCP
 
+# TODO: at the end of https://go.epfl.ch/CHG0045724 we remove this one.
+
 - name: "fallback-reverse-proxy Route"
   kubernetes.core.k8s:
     definition:
@@ -76,3 +78,124 @@
             pLiaWN0bfVKfjllDiIGknibVb63dDcY3fe0Dkhvld1927jyNxF1WW6LZZm6zNTfl
             MrY=
             -----END CERTIFICATE-----
+
+- name: "WordPress Route"
+  kubernetes.core.k8s:
+    definition:
+      kind: Route
+      metadata:
+        name: wordpress
+        namespace: svc0041p-wordpress
+        labels:
+          route: public
+      spec:
+        host: www.epfl.ch
+        to:
+          kind: Service
+          name: wp-nginx
+        port:
+          targetPort: 80
+        tls:
+          termination: edge
+          insecureEdgeTerminationPolicy: Redirect
+
+- name: "Fallback reverse-proxy Routes"
+  kubernetes.core.k8s:
+    definition:
+      kind: Route
+      metadata:
+        name: >-
+          fallback-reverse-proxy-{{ item | regex_replace('[^A-Za-z0-9]', '-') }}
+               item | regex_replace('[^A-Za-z0-9-]+', '-')
+        namespace: svc0041p-wordpress
+        labels:
+          route: public
+      spec:
+        host: www.epfl.ch
+        path: "{{ item }}"
+        to:
+          kind: Service
+          name: fallback-reverse-proxy
+        port:
+          targetPort: https
+        tls:
+          termination: reencrypt
+          insecureEdgeTerminationPolicy: Redirect
+          destinationCACertificate: |
+            -----BEGIN CERTIFICATE-----
+            MIIDjjCCAnagAwIBAgIQAzrx5qcRqaC7KGSxHQn65TANBgkqhkiG9w0BAQsFADBh
+            MQswCQYDVQQGEwJVUzEVMBMGA1UEChMMRGlnaUNlcnQgSW5jMRkwFwYDVQQLExB3
+            d3cuZGlnaWNlcnQuY29tMSAwHgYDVQQDExdEaWdpQ2VydCBHbG9iYWwgUm9vdCBH
+            MjAeFw0xMzA4MDExMjAwMDBaFw0zODAxMTUxMjAwMDBaMGExCzAJBgNVBAYTAlVT
+            MRUwEwYDVQQKEwxEaWdpQ2VydCBJbmMxGTAXBgNVBAsTEHd3dy5kaWdpY2VydC5j
+            b20xIDAeBgNVBAMTF0RpZ2lDZXJ0IEdsb2JhbCBSb290IEcyMIIBIjANBgkqhkiG
+            9w0BAQEFAAOCAQ8AMIIBCgKCAQEAuzfNNNx7a8myaJCtSnX/RrohCgiN9RlUyfuI
+            2/Ou8jqJkTx65qsGGmvPrC3oXgkkRLpimn7Wo6h+4FR1IAWsULecYxpsMNzaHxmx
+            1x7e/dfgy5SDN67sH0NO3Xss0r0upS/kqbitOtSZpLYl6ZtrAGCSYP9PIUkY92eQ
+            q2EGnI/yuum06ZIya7XzV+hdG82MHauVBJVJ8zUtluNJbd134/tJS7SsVQepj5Wz
+            tCO7TG1F8PapspUwtP1MVYwnSlcUfIKdzXOS0xZKBgyMUNGPHgm+F6HmIcr9g+UQ
+            vIOlCsRnKPZzFBQ9RnbDhxSJITRNrw9FDKZJobq7nMWxM4MphQIDAQABo0IwQDAP
+            BgNVHRMBAf8EBTADAQH/MA4GA1UdDwEB/wQEAwIBhjAdBgNVHQ4EFgQUTiJUIBiV
+            5uNu5g/6+rkS7QYXjzkwDQYJKoZIhvcNAQELBQADggEBAGBnKJRvDkhj6zHd6mcY
+            1Yl9PMWLSn/pvtsrF9+wX3N3KjITOYFnQoQj8kVnNeyIv/iPsGEMNKSuIEyExtv4
+            NeF22d+mQrvHRAiGfzZ0JFrabA0UWTW98kndth/Jsw1HKj2ZL7tcu7XUIOGZX1NG
+            Fdtom/DzMNU+MeKNhJ7jitralj41E6Vf8PlwUHBHQRFXGU7Aj64GxJUTFy8bJZ91
+            8rGOmaFvE7FBcf6IKshPECBV1/MUReXgRPTqh5Uykw7+U0b6LJ3/iyK5S9kJRaTe
+            pLiaWN0bfVKfjllDiIGknibVb63dDcY3fe0Dkhvld1927jyNxF1WW6LZZm6zNTfl
+            MrY=
+            -----END CERTIFICATE-----
+
+  with_items:
+    #######################################################
+    ## URLs diverted by Varnish
+    # ... to Web2010 (`nginx-web2010` deployment)
+    - /accessibility.en.shtml
+    - /accessibility.fr.shtml
+    - /css
+    - /errors
+    - /javascript-help.en.shtml
+    - /javascript-help.fr.shtml
+    - /js
+    - /navigate.en.shtml
+    - /navigate.fr.shtml
+    - /images
+    - /img
+    # Redirected as part of /etc/nginx/conf.d/web2010_nginx.conf on that same Deployment:
+    - /cgi-bin/csoldap
+    - /templates
+ 
+    # ... to another Deployment than `httpd-www`
+    - /labs
+
+    #######################################################
+    ## Files and subdirectories formerly served by WordPress' Apache
+
+    # https://www.ncsc.admin.ch/ncsc/fr/home/infos-fuer/infos-unternehmen/aktuelle-themen/security-txt.html
+    # says we should have this?
+    - /security.txt
+    # ... And it comes with a PGP key for some reason?
+    - /gpg_key.txt
+
+    - /analytics.txt
+    - /cdn-cgi/
+    - /favicon.ico
+    - /fonts
+
+    # Not kept:
+    # - JSON files and subdirectories matching *menu* are *not* meant to be served.
+    # - /google*.html files are DNS challenges. They are single-use.
+
+    #######################################################
+    ## Vanity URLs
+    - /stats
+    # Decision: we didn't keep https://www.epfl.ch/kaltura/; it is broken since we switched HSTS on.
+    # /Klatura barada nikto
+
+    #######################################################
+    ## WordPress sub-hierarchies
+    - /about
+    - /campus
+    - /education
+    - /innovation
+    - /research
+    - /schools
