[fix] No two consecutive dashes in object names
.. including no `fallback-reverse-proxy--`

--- a/ansible/roles/openshift-reverse-proxy/tasks/reverseproxy.yml
+++ b/ansible/roles/openshift-reverse-proxy/tasks/reverseproxy.yml
@@ -105,8 +105,9 @@
       kind: Route
       metadata:
         name: >-
-          fallback-reverse-proxy-{{ item | regex_replace('[^A-Za-z0-9]', '-') }}
+          fallback-reverse-proxy-{{
                item | regex_replace('[^A-Za-z0-9-]+', '-')
+                    | regex_replace('^-', '')  }}
         namespace: svc0041p-wordpress
         labels:
           route: public
