[feature] add key for s3 prod WPN-230

--- a/ansible/roles/wordpress-namespace/tasks/mariadb.yml
+++ b/ansible/roles/wordpress-namespace/tasks/mariadb.yml
@@ -39,7 +39,7 @@
         storage:
           s3:
             bucket: "{{ s3_bucket }}"
-            prefix: backup/wpn
+            prefix: MariaDB
             endpoint: s3.epfl.ch
             accessKeyIdSecretKeyRef:
               name: s3-backup-credentials
