[feature](WPN-188) add new container menu-api OS4

--- a/ansible/roles/wordpress-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-namespace/tasks/main.yml
@@ -64,6 +64,15 @@
     - wp.web
     - wp.nginx
 
+- name: "Menu API"
+  include_tasks:
+    file: menu-api.yml
+    apply:
+      tags:
+        - menu_api
+  tags:
+    - menu_api
+
 - name: Cloudflare Settings
   when: >-
     "openshift_namespaces_prod" in group_names
