[fix] Earlier backup job
As we are on GMT+1, the sooner the better.

--- a/ansible/roles/wordpress-namespace/tasks/mariadb.yml
+++ b/ansible/roles/wordpress-namespace/tasks/mariadb.yml
@@ -45,7 +45,7 @@
         mariaDbRef:
           name: "{{ mariadb_name }}"
         schedule:
-          cron: "0 3 */1 * *"
+          cron: "0 1 * * *"
           suspend: false
         storage:
           s3:
