--- a/ansible/roles/wordpress-namespace/tasks/menu-api.yml
+++ b/ansible/roles/wordpress-namespace/tasks/menu-api.yml
@@ -19,7 +19,7 @@
           SERVICE_PORT: "3001"
           PATH_REFRESH_FILE: "./data"
           PATH_SITES_FILE: ""
-          NAMESPACE: "svc0041t-wordpress"
+          NAMESPACE: "{{ inventory_namespace }}"
           DEBUG: {{ _debug }}
           LOCAL_ENV: false
           REST_URL_END: "wp-json/epfl/v1/menus/top?lang="
